partially completed swagger
