# cmd/api/docs/swagger.json
@@ -138,7 +138,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Admin"
+                            "$ref": "#/definitions/models.AdminLogin"
                         }
                     }
                 ],
@@ -250,6 +250,17 @@
                     "Coupon"
                 ],
                 "summary": "Add  a new coupon by Admin",
+                "parameters": [
+                    {
+                        "description": "Add new Coupon",
+                        "name": "coupon",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AddCoupon"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -361,6 +372,17 @@
                     "Admin"
                 ],
                 "summary": "Add Category",
+                "parameters": [
+                    {
+                        "description": "Update Category",
+                        "name": "category",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CategoryUpdate"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -993,6 +1015,17 @@
                     "Cart"
                 ],
                 "summary": "Add coupon to out order",
+                "parameters": [
+                    {
+                        "description": "Add coupon to order",
+                        "name": "couponDetails",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CouponAddUser"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1072,7 +1105,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UserDetails"
+                            "$ref": "#/definitions/models.UserLogin"
                         }
                     }
                 ],
@@ -1635,20 +1668,20 @@
         }
     },
     "definitions": {
-        "domain.Admin": {
+        "models.AddCoupon": {
             "type": "object",
             "properties": {
-                "email": {
+                "coupon": {
                     "type": "string"
                 },
-                "id": {
+                "discount_percentage": {
                     "type": "integer"
                 },
-                "name": {
-                    "type": "string"
+                "minimum_price": {
+                    "type": "number"
                 },
-                "password": {
-                    "type": "string"
+                "validity": {
+                    "type": "boolean"
                 }
             }
         },
@@ -1678,9 +1711,22 @@
                 },
                 "street": {
                     "type": "string"
+                }
+            }
+        },
+        "models.AdminLogin": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
                 },
-                "user_id": {
-                    "type": "integer"
+                "password": {
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 8
                 }
             }
         },
@@ -1697,6 +1743,31 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CategoryUpdate": {
+            "type": "object",
+            "properties": {
+                "director": {
+                    "type": "string"
+                },
+                "format": {
+                    "type": "string"
+                },
+                "genre": {
+                    "type": "string"
+                },
+                "language": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CouponAddUser": {
+            "type": "object",
+            "properties": {
+                "coupon_name": {
                     "type": "string"
                 }
             }
@@ -1775,6 +1846,17 @@
                     "type": "string"
                 },
                 "phone": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserLogin": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
